// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/IDENTIFIER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/ULONG.proto";


package event.protobuf;

message SpecificAttributeDefinition {
extensions 6 to 106;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.ULONG type = 2;
  optional ccsds_mal.protobuf.STRING workingUnit = 3;
  optional ccsds_mal.protobuf.STRING displayUnit = 4;
  optional ccsds_mal.protobuf.STRING format = 5;
}
